crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_wrapper-7.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsPure>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsPure for TestInst {
    fn is_pure(&self) -> bool {
        match self {
            Self::WrapA(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::IsPure>::is_pure(wrapped_instruction)
            }
            Self::WrapB(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::IsPure>::is_pure(wrapped_instruction)
            }
            Self::Regular { .. } => true,
        }
    }
}
