crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_enum_derivation-6.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsConstant>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsConstant for TestInst {
    fn is_constant(&self) -> bool {
        match self {
            Self::Terminate { .. } => false,
            Self::Constant { .. } => true,
            Self::NotPureOp { .. } => false,
        }
    }
}
