crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_enum_derivation.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: rustfmt(ctx.generate().to_string().as_str())
---
#[automatically_derived]
impl ::kirin_ir::Instruction for TestInst {
    fn is_terminator(&self) -> bool {
        match self {
            Self::Terminate { .. } => true,
            Self::Constant { .. } => false,
            Self::NotPureOp { .. } => false,
        }
    }
    fn is_constant(&self) -> bool {
        match self {
            Self::Terminate { .. } => false,
            Self::Constant { .. } => true,
            Self::NotPureOp { .. } => false,
        }
    }
    fn is_pure(&self) -> bool {
        match self {
            Self::Terminate { .. } => true,
            Self::Constant { .. } => true,
            Self::NotPureOp { .. } => true,
        }
    }
    fn arguments(&self) -> impl Iterator<Item = ::kirin_ir::SSAValue> {
        __KirinArgumentsIter {
            parent: self,
            index: 0,
        }
    }
    fn results(&self) -> impl Iterator<Item = ::kirin_ir::ResultValue> {
        __KirinResultsIter {
            parent: self,
            index: 0,
        }
    }
    fn successors(&self) -> impl Iterator<Item = ::kirin_ir::Block> {
        __KirinSuccessorsIter {
            parent: self,
            index: 0,
        }
    }
    fn regions(&self) -> impl Iterator<Item = ::kirin_ir::Region> {
        __KirinRegionsIter {
            parent: self,
            index: 0,
        }
    }
}
#[automatically_derived]
pub struct __KirinArgumentsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinArgumentsIter<'__kirin_ir_iter_a> {
    type Item = ::kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            TestInst::NotPureOp { arg1, arg2, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(arg1.clone())
                }
                1 => {
                    self.index += 1;
                    Some(arg2.clone())
                }
                _ => None,
            },
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinResultsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinResultsIter<'__kirin_ir_iter_a> {
    type Item = ::kirin_ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            TestInst::NotPureOp { result, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(result.clone())
                }
                _ => None,
            },
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinSuccessorsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinSuccessorsIter<'__kirin_ir_iter_a> {
    type Item = ::kirin_ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            TestInst::Terminate { target, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(target.clone())
                }
                _ => None,
            },
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinRegionsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinRegionsIter<'__kirin_ir_iter_a> {
    type Item = ::kirin_ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            _ => None,
        }
    }
}
