crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_enum_wrapper-3.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveHasSuccessors>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::HasSuccessors for WrapperInst {
    fn successors(&self) -> impl Iterator<Item = &::kirin_ir::Block> {
        match self {
            Self::WrapA(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::HasSuccessors>::successors()
            }
            Self::WrapB(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::HasSuccessors>::successors()
            }
        }
    }
}
